--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#068251</color>
+    <color name="blue">#30A0E0</color>
+    <color name="lightGrey">#efefef</color>
+    <color name="Grey">#d2d2d2</color>
+    <color name="darkGrey">#616161</color>
+
+
 </resources>
