--- a/app/src/main/res/layout/item_danhgia.xml
+++ b/app/src/main/res/layout/item_danhgia.xml
@@ -3,14 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
+    android:padding="8dp"
+    android:background="@drawable/bg_dialog"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
     >
 
     <ImageView
         android:id="@+id/imgAvatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_launcher_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -26,18 +29,35 @@
         app:layout_constraintLeft_toRightOf="@id/imgAvatar"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <RatingBar
+        android:id="@+id/start"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:progressBackgroundTint="@color/Grey"
+        android:progressTint="#FFEB3B"
+        android:rating="0"
+        android:scaleX="0.4"
+        android:scaleY="0.4"
+        android:stepSize="1"
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        app:layout_constraintLeft_toLeftOf="@+id/imgAvatar"
+        />
+
     <TextView
         android:id="@+id/comment"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
         android:ellipsize="none"
-        android:maxLines="3"
-        android:lineSpacingExtra="4dp"
         android:text="Review comment"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@id/imgAvatar"
-        app:layout_constraintTop_toBottomOf="@id/username" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/start" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
+<!--    android:lineSpacingExtra="4dp"-->
+<!--    android:maxLines="3"-->
