--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorButton">#FF5733</color>
-    <color name="blue">#0000FF</color>
+    <color name="blue">#30A0E0</color>
     <color name="lightGrey">#D3D3D3</color>
     <color name="Grey">#808080</color>
 </resources>
