dung add thanh toan

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -134,7 +134,7 @@
     </LinearLayout>
 
     <!-- Nút thanh toán -->
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/checkout_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -143,7 +143,9 @@
         android:layout_margin="16dp"
         app:layout_constraintBottom_toTopOf="@id/bottomnavigation"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/button_background"
+        />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
