--- a/app/src/main/res/layout/activity_doi_mk.xml
+++ b/app/src/main/res/layout/activity_doi_mk.xml
@@ -205,6 +205,7 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:backgroundTint="@color/blue"
             />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
