--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="blue">#30A0E0</color>
     <color name="lightGrey">#D3D3D3</color>
     <color name="Grey">#808080</color>
+    <color name="gray_4dd">#4dd9d9d9</color>
+    <color name="gray_d9d">#d9d9d9</color>
+
 </resources>
