--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,15 @@
     </style>
 
     <style name="Theme.DATN_MD03_UngDungMuaBanGiaySneakZone" parent="Base.Theme.DATN_MD03_UngDungMuaBanGiaySneakZone" />
+
+    <style name="textStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="textStyleBold" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
 </resources>
