--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,7 +123,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/tvXemThem"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Xem thêm"
