--- a/app/src/main/res/drawable/bg_dialog.xml
+++ b/app/src/main/res/drawable/bg_dialog.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="@color/white"/>
     <corners android:radius="14dp"/>
-    <stroke android:width="2dp" android:color="#E91E63"/>
+    <stroke android:width="2dp" android:color="#2196F3"/>
 
 </shape>
