--- a/app/src/main/res/layout/activity_sp_pho_bien.xml
+++ b/app/src/main/res/layout/activity_sp_pho_bien.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_SP_PhoBien">
 
+
+
     <ImageView
         android:id="@+id/imgBack_SPPB"
         android:layout_width="wrap_content"
@@ -31,6 +33,25 @@
         app:layout_constraintStart_toEndOf="@+id/imgBack_SPPB"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--    Thanh tìm kiếm -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search"
+            android:visibility="gone" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <ImageView
         android:id="@+id/imgSearch_SPPB"
         android:layout_width="24dp"
@@ -49,7 +70,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintTop_toBottomOf="@id/imgBack_SPPB"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         />
