--- a/app/src/main/res/layout/activity_fix_infor.xml
+++ b/app/src/main/res/layout/activity_fix_infor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -30,9 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="30dp"
-        android:text="Chỉnh sửa thông tin"
+        android:text="  Thông tin cá nhân"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgBack_fixinfor"
@@ -57,7 +58,6 @@
             android:scaleType="centerCrop"
             android:src="@drawable/btn_4" />
     </androidx.cardview.widget.CardView>
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView1"
@@ -94,11 +94,9 @@
         app:layout_constraintTop_toBottomOf="@id/cardView1" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop"
+        android:id="@+id/cvName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
@@ -106,25 +104,18 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_fixinfor"
-        >
+        app:layout_constraintTop_toBottomOf="@id/tv_name_fixinfor">
 
-
-
-        <EditText
-            android:id="@+id/editTen_fixinfor"
+        <Button
+            android:id="@+id/btnName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/edittext_background2"
-            android:ems="10"
-            android:hint="Nhập tên của bạn"
-            android:inputType="text"
-            android:padding="12dp"
-            android:textColor="@color/white"
+            android:text="Sửa tên ban"
+            android:textColor="@color/black"
             android:textSize="18sp"
-          />
+            android:padding="12dp" />
     </androidx.cardview.widget.CardView>
-
 
     <TextView
         android:id="@+id/tv_mail_fixinfor"
@@ -137,14 +128,12 @@
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvOderForShop" />
+        app:layout_constraintTop_toBottomOf="@+id/cvName" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop1"
+        android:id="@+id/cvEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
@@ -152,30 +141,25 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_mail_fixinfor"
-        >
+        app:layout_constraintTop_toBottomOf="@id/tv_mail_fixinfor">
 
-        <EditText
-            android:id="@+id/editEmail_fixinfor"
+        <Button
+            android:id="@+id/btnEmaill"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/edittext_background2"
-            android:ems="10"
-            android:hint="Nhập email của bạn"
-            android:inputType="text"
             android:padding="12dp"
-            android:textColor="@color/white"
+            android:text="Cap nhat email"
+            android:textColor="@color/black"
             android:textSize="18sp"
+
             />
     </androidx.cardview.widget.CardView>
 
-
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvOderForShop2"
+        android:id="@+id/cvChinhSua"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
         android:layout_marginLeft="8dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
@@ -184,19 +168,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
-        <Button
-            android:id="@+id/btnChinhSua_fixinfor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="8dp"
-            android:text="Chỉnh sửa"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/blue"
-            />
+
     </androidx.cardview.widget.CardView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
