namanh code day code dky co xac thuc va lam cho day so chay lien tuc

--- a/app/src/main/res/layout/activity_manhinhnhanguima.xml
+++ b/app/src/main/res/layout/activity_manhinhnhanguima.xml
@@ -54,7 +54,7 @@
             android:contentDescription="Email Icon"
             android:layout_gravity="center_vertical"/>
 
-        <!-- Trường nhập email -->
+        <!-- Trường hien email -->
         <TextView
             android:id="@+id/tvEmaill"
             android:layout_width="0dp"
