--- a/app/src/main/res/layout/activity_man_hinh_chao.xml
+++ b/app/src/main/res/layout/activity_man_hinh_chao.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D7D6D7"
-    tools:context=".ManHinhChao">
+    tools:context=".Activity.ManHinhChao">
 
 
     <ImageView
