--- a/app/src/main/res/layout/activity_doi_mk.xml
+++ b/app/src/main/res/layout/activity_doi_mk.xml
@@ -39,16 +39,16 @@
         app:layout_constraintStart_toEndOf="@+id/imgBack_doiMK"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageCP"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="104dp"
-        android:src="@drawable/changepass"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageCP"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:layout_marginEnd="104dp"-->
+<!--        android:src="@drawable/changepass"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
     />
 
     <TextView
@@ -62,7 +62,7 @@
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageCP" />
+        app:layout_constraintTop_toBottomOf="@id/textView" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvOderForShop"
