--- a/app/src/main/res/layout/activity_fix_infor.xml
+++ b/app/src/main/res/layout/activity_fix_infor.xml
@@ -80,18 +80,18 @@
             app:layout_constraintTop_toBottomOf="@id/cardView" />
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tv_name_fixinfor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:text="Họ tên"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView1" />
+<!--    <TextView-->
+<!--        android:id="@+id/tv_name_fixinfor"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="16dp"-->
+<!--        android:layout_marginTop="32dp"-->
+<!--        android:text="Họ tên"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="25dp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/cardView1" />-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvName"
@@ -104,20 +104,20 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_fixinfor">
+        app:layout_constraintTop_toBottomOf="@id/cardView1">
 
         <Button
             android:id="@+id/btnName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_background2"
-            android:text="Sửa tên ban"
+            android:text="Cập nhật họ tên"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:padding="12dp" />
     </androidx.cardview.widget.CardView>
 
-    <TextView
+    <!--<TextView
         android:id="@+id/tv_mail_fixinfor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -128,7 +128,7 @@
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvName" />
+        app:layout_constraintTop_toBottomOf="@+id/cvName" />-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvEmail"
@@ -141,7 +141,7 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_mail_fixinfor">
+        app:layout_constraintTop_toBottomOf="@id/cvName">
 
         <Button
             android:id="@+id/btnEmaill"
