--- a/app/src/main/res/layout/activity_fix_infor.xml
+++ b/app/src/main/res/layout/activity_fix_infor.xml
@@ -6,89 +6,70 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="36dp"
     tools:context=".Activity.Activity_FixInfor">
 
+    <!-- Nút quay lại -->
     <ImageView
         android:id="@+id/imgBack_fixinfor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="3dp" />
-
+    <!-- Tiêu đề -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="30dp"
-        android:text="  Thông tin cá nhân"
+        android:layout_marginTop="16dp"
+        android:text="Thông tin cá nhân"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgBack_fixinfor"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/imgBack_fixinfor"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
 
+    <!-- CardView cập nhật ảnh đại diện -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:cardCornerRadius="100dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        android:layout_marginTop="24dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btncapnhat_Imgae"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_background2"
-            android:text="Cập nhật ảnh dai dien"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:padding="12dp" />
+            android:background="@drawable/buttontinhte"
+            android:text="Cập nhật ảnh đại diện"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:padding="12dp"
+
+            />
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:cardCornerRadius="100dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
-
-
-    </androidx.cardview.widget.CardView>
-
->
-
+    <!-- CardView cập nhật họ tên -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cvName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView1">
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/cardView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btnName"
@@ -96,75 +77,55 @@
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_background2"
             android:text="Cập nhật họ tên"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
             android:padding="12dp" />
     </androidx.cardview.widget.CardView>
 
-    <!--<TextView
-        android:id="@+id/tv_mail_fixinfor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:text="Email"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvName" />-->
-
+    <!-- CardView cập nhật email -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cvEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvName">
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/cvName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btnEmaill"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_background2"
-            android:padding="12dp"
-            android:text="Cap nhat email"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-
-            />
+            android:text="Cập nhật email"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:padding="12dp" />
     </androidx.cardview.widget.CardView>
 
-
+    <!-- CardView thay đổi mật khẩu -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cvChangePass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvEmail">
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/cvEmail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btnChangePass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_background2"
-            android:padding="12dp"
             android:text="Thay đổi mật khẩu"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:padding="12dp" />
     </androidx.cardview.widget.CardView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
