nam anh day code giao dien chat visoson 3 , nut back

--- a/app/src/main/res/drawable/message_background_received.xml
+++ b/app/src/main/res/drawable/message_background_received.xml
@@ -1,4 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E0E0E0" />
-    <corners android:radius="16dp" />
+    <solid android:color="#00BCD4" />
+    <corners android:radius="10dp" />
+    <padding
+        android:left="8dp"
+        android:right="8dp"
+        android:top="8dp"
+        android:bottom="8dp" />
 </shape>
