--- a/app/src/main/res/layout/activity_item_chat_admin_nhan.xml
+++ b/app/src/main/res/layout/activity_item_chat_admin_nhan.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,17 +5,36 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
+    <!-- Ảnh đại diện -->
+    <ImageView
+        android:id="@+id/imageViewAdminAvatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+    android:layout_marginEnd="8dp"
+    android:src="@drawable/logo1"
+    android:scaleType="centerCrop"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent" />
+
     <!-- Nội dung tin nhắn -->
     <TextView
         android:id="@+id/textViewMessageReceived"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:background="@drawable/message_background_received"
-        android:textColor="#000000"
+        android:ellipsize="none"
+        android:maxWidth="250dp"
+        android:minWidth="50dp"
+        android:padding="12dp"
+        android:singleLine="false"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@id/imageViewAdminAvatar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
