--- a/app/src/main/res/layout/activity_item_chat_message_khachhang.xml
+++ b/app/src/main/res/layout/activity_item_chat_message_khachhang.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,20 +10,25 @@
         android:id="@+id/textViewMessageSent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="12dp"
         android:background="@drawable/message_background_sent"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonDeleteMessage" />
+        android:maxWidth="250dp"
+    android:minWidth="50dp"
+    android:ellipsize="none"
+    android:singleLine="false"
+    app:layout_constraintEnd_toStartOf="@id/buttonDeleteMessage"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- Nút xóa tin nhắn -->
+    <!-- Nút xóa -->
     <ImageButton
         android:id="@+id/buttonDeleteMessage"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="?attr/selectableItemBackground"
         android:contentDescription="Delete Message"
         android:src="@android:drawable/ic_menu_delete"
