--- a/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
@@ -292,24 +292,38 @@
                         />
                     <LinearLayout
                         android:visibility="gone"
-                        android:id="@+id/idlr"
+                        android:id="@+id/idlr_gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
+                            android:id="@+id/txtName_TT"
                             android:layout_marginTop="8dp"
                             android:textStyle="italic"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Address: "/>
+                            android:textColor="@color/black"
+                            android:text="Name: "/>
                         <TextView
+                            android:id="@+id/txtAddress_TT"
                             android:layout_marginTop="8dp"
                             android:textStyle="italic"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Address: "/>
+                        <TextView
+                            android:id="@+id/txtPhone_TT"
+                            android:layout_marginTop="8dp"
+                            android:textStyle="italic"
+                            android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Phone: "/>
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/lraddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -321,15 +335,6 @@
                             android:id="@+id/txtAddress"
                             android:layout_marginStart="8dp"
                             android:text="Enter your address"
-                            style="@style/textStyleBold"
-                            />
-                        <TextView
-                            android:layout_marginTop="8dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/txtPhone"
-                            android:layout_marginStart="8dp"
-                            android:visibility="gone"
                             style="@style/textStyleBold"
                             />
                     </LinearLayout>
@@ -383,7 +388,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-            ><androidx.appcompat.widget.AppCompatButton
+            <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Order Now"
