--- a/app/src/main/res/layout/fragment_dang_giao.xml
+++ b/app/src/main/res/layout/fragment_dang_giao.xml
@@ -10,17 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:visibility="gone"
-        android:id="@+id/rcv_deliver"/>
-    <TextView
-        android:id="@+id/noResultsTextView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:text="Danh sách sản phẩm trống"
-        android:textSize="30dp"
-        />
+        android:id="@+id/rcv_dangGiao"/>
+
 
 </LinearLayout>
