hieu code xoa gh

--- a/app/src/main/res/layout/activity_ctdh_da_giao.xml
+++ b/app/src/main/res/layout/activity_ctdh_da_giao.xml
@@ -33,7 +33,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="800dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -256,16 +256,16 @@
                     android:textStyle="bold"
                     />
 
-                <Button
-                    android:id="@+id/btnDaNhanHang"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTCP"
-                    android:layout_marginTop="16dp"
-                    android:text="Đã nhận được hàng"
-                    android:textSize="20dp"
-                    />
+<!--                <Button-->
+<!--                    android:id="@+id/btnDaNhanHang"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                    app:layout_constraintTop_toBottomOf="@+id/tvTCP"-->
+<!--                    android:layout_marginTop="16dp"-->
+<!--                    android:text="Đã nhận được hàng"-->
+<!--                    android:textSize="20dp"-->
+<!--                    />-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
