--- a/app/src/main/res/layout/activity_ctdh_cho_xac_nhan.xml
+++ b/app/src/main/res/layout/activity_ctdh_cho_xac_nhan.xml
@@ -33,7 +33,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="800dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
+            android:layout_marginBottom="50dp"
             >
 
             <androidx.recyclerview.widget.RecyclerView
