--- a/app/src/main/res/layout/activity_ctdh_dang_giao.xml
+++ b/app/src/main/res/layout/activity_ctdh_dang_giao.xml
@@ -33,7 +33,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="800dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
