--- a/app/src/main/res/layout/activity_sp_pho_bien.xml
+++ b/app/src/main/res/layout/activity_sp_pho_bien.xml
@@ -7,8 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_SP_PhoBien">
 
-
-
     <ImageView
         android:id="@+id/imgBack_SPPB"
         android:layout_width="wrap_content"
@@ -19,6 +17,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
+
+    <!--    Thanh tìm kiếm -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -28,49 +28,39 @@
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imgSearch_SPPB"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgBack_SPPB"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--    Thanh tìm kiếm -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/rcvSPPhoBien_SPPB"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        >
+        app:layout_constraintTop_toBottomOf="@id/textView">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search"
-            android:visibility="gone" />
+            android:hint="Search" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <ImageView
-        android:id="@+id/imgSearch_SPPB"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/search" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvSPPhoBien_SPPB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="700dp"
         android:layout_margin="16dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgBack_SPPB"
+        app:layout_constraintTop_toBottomOf="@id/tIn"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         />
